# ioq3df

./: CMakeLists.txt  Makefile  README.md
code/client/: cl_cgame.c  cl_console.c  cl_curl.c  cl_keys.c  cl_main.c  cl_parse.c
code/qcommon/: cmd.c  common.c  files.c  q_shared.c  q_shared.h  qcommon.h
code/renderercommon/: tr_public.h
code/renderergl1/: tr_image.c  tr_init.c  tr_local.h  tr_shader.c
code/renderergl2/: tr_image.c  tr_init.c  tr_local.h  tr_scene.c  tr_shader.c
code/sdl/: sdl_glimp.c  sdl_input.c
code/server/: sv_init.c
code/sys/: sys_win32.c
code/ui/: ui_main.c
misc/CMakeLists/client/: CMakeLists.txt
misc/CMakeLists/client/internal_asm/: CMakeLists.txt
misc/CMakeLists/client/internal_inline_asm/: CMakeLists.txt
misc/CMakeLists/client/internal_masm/: CMakeLists.txt
misc/CMakeLists/include/: cmake_compatibility.cmake  default_options.cmake  directory_constants.cmake  glsl_to_c.cmake  internal_client_asm.cmake  internal_inline_asm.cmake  internal_jpeg.cmake  internal_masm.cmake  internal_ogg.cmake  internal_opus.cmake  internal_opusfile.cmake  internal_server_asm.cmake  internal_speex.cmake  internal_vorbis.cmake  internal_zlib.cmake  libsdl_headers.cmake  platform.cmake  qvm_options.cmake  qvm_tools.cmake  try_asm.c  try_client_asm.c
misc/CMakeLists/qvm/: CMakeLists.txt
misc/CMakeLists/qvm/baseq3/: CMakeLists.txt
misc/CMakeLists/qvm/baseq3/cgame/: CMakeLists.txt
misc/CMakeLists/qvm/baseq3/game/: CMakeLists.txt
misc/CMakeLists/qvm/baseq3/ui/: CMakeLists.txt
misc/CMakeLists/qvm/missionpack/: CMakeLists.txt
misc/CMakeLists/qvm/missionpack/cgame/: CMakeLists.txt
misc/CMakeLists/qvm/missionpack/game/: CMakeLists.txt
misc/CMakeLists/qvm/missionpack/ui/: CMakeLists.txt
misc/CMakeLists/renderergl1/: CMakeLists.txt
misc/CMakeLists/renderergl2/: CMakeLists.txt
misc/CMakeLists/server/: CMakeLists.txt
misc/CMakeLists/server/internal_inline_asm/: CMakeLists.txt
misc/CMakeLists/server/internal_masm/: CMakeLists.txt
misc/CMakeLists/tools/: CMakeLists.txt
misc/CMakeLists/tools/lburg/: CMakeLists.txt
misc/CMakeLists/tools/q3asm/: CMakeLists.txt
misc/CMakeLists/tools/q3cpp/: CMakeLists.txt
misc/CMakeLists/tools/q3lcc/: CMakeLists.txt
misc/CMakeLists/tools/q3rcc/: CMakeLists.txt
misc/CMakeLists/vm/: CMakeLists.txt
misc/CMakeLists/vm/baseq3/: CMakeLists.txt
misc/CMakeLists/vm/baseq3/cgame/: CMakeLists.txt
misc/CMakeLists/vm/baseq3/game/: CMakeLists.txt
misc/CMakeLists/vm/baseq3/ui/: CMakeLists.txt
misc/CMakeLists/vm/missionpack/: CMakeLists.txt
misc/CMakeLists/vm/missionpack/cgame/: CMakeLists.txt
misc/CMakeLists/vm/missionpack/game/: CMakeLists.txt
misc/CMakeLists/vm/missionpack/ui/: CMakeLists.txt
